# argparse-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yaml
doc/: manual.md
examples/: CMakeLists.txt  Demo.cpp
include/argparse/: argparse.hpp
lib/: CMakeLists.txt
src/: Argument.cpp  Argument.hpp  ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  ParsedArgs.cpp  ParsedArgs.hpp
src/argparse/: Argument.hpp  ArgumentParser.cpp  ArgumentParser.hpp  Error.hpp  ParsedArgs.hpp  argparse.hpp
test/: Main.cpp  Run.hpp  Tests.cpp  Tests.hpp
tests/: CMakeLists.txt  Log.hpp  Main.cpp  Run.hpp  Tests.cpp
